@@ -381,9 +381,10 @@
    `(org-agenda-date-weekend ((t (:foreground ,fgcyan))))
    `(org-agenda-done ((t (:foreground ,fgorange))))
    `(org-agenda-structure ((t (:foreground ,fgblue))))
+   `(org-block ((t (:foreground ,fgdefault :background ,bgdim :inherit unspecified))))
    `(org-block-background ((t (:background ,bgdim))))
-   `(org-block-begin-line ((t (:foreground ,fgdefault :slant unspecified :underline ,fgdim))))
-   `(org-block-end-line ((t (:foreground ,fgdefault :slant unspecified :overline ,fgdim))))
+   `(org-block-begin-line ((t (:foreground ,fgdefault :slant unspecified :background ,bgbright))))
+   `(org-block-end-line ((t (:foreground ,fgdefault :slant unspecified :background ,bgbright))))
    `(org-checkbox-statistics-done ((t (:foreground ,bgcyan))))
    `(org-checkbox-statistics-todo ((t (:foreground ,fgcyan))))
    `(org-date ((t (:foreground ,fgpink :underline unspecified))))
